--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,17 +2,22 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.126",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "axios": "^1.8.4",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "recharts": "^2.6.2",
-    "tailwindcss": "^3.3.2",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
