--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,18 @@
-name = "berghain"
+
+name = "berghain-api"
 main = "src/index.ts"
-compatibility_date = "2024-03-01"
+compatibility_date = "2024-03-20"
+account_id = "e611850c31bf52879f8dc10f7cff6686"
 
 [[d1_databases]]
-binding = "lineup"  # ← これがバインディング名
-database_name = "lineup"  # Cloudflare D1 で設定したデータベース名
-database_id = "f1c358a9-4f64-47cf-81fd-5d9d80a35c98"  # D1 DB のUUID
+binding = "lineup"
+database_id = "9962a30e-5078-491d-951d-2c2b8b17d9c1"
+database_name = "lineup"
+
+[env.production]
+route = "https://klubnacht.tyna.ninja/api/*"
+zone_id = "2aac368de6eaf231b0ca667f9a6ea5d4"
+[[env.production.d1_databases]]
+binding = "lineup"
+database_id = "9962a30e-5078-491d-951d-2c2b8b17d9c1"
+database_name = "lineup"
