--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   },
   "homepage": ".",
   "dependencies": {
+    "@tanstack/react-query": "^4.29.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.8.0",
-    "@tanstack/react-query": "^4.29.7"
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
-    "wrangler": "^3.24.0",
+    "@types/react": "^18.2.38",
+    "@types/react-dom": "^18.2.14",
     "eslint": "^8.56.0",
-    "prettier": "^3.2.5",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "typescript": "^5.3.3",
-    "@types/react": "^18.2.38",
-    "@types/react-dom": "^18.2.14"
+    "prettier": "^3.2.5",
+    "typescript": "^4.9.5",
+    "wrangler": "^3.24.0"
   },
   "browserslist": {
     "production": [
