--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,9 +6,13 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "typescript": "4.9.5",
     "web-vitals": "^3.3.1"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.43",
+    "@types/react-dom": "^18.2.17"
   },
   "scripts": {
     "start": "react-scripts start",
