--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,15 +13,16 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "recharts": "^2.7.2"
+    "recharts": "^2.7.2",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "typescript": "4.9.5",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/user-event": "^14.4.3"
+    "typescript": "4.9.5"
   },
   "browserslist": {
     "production": [
