--- a/worker/package.json
+++ b/worker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "berghain-worker",
+  "name": "berghain-api-production",
   "version": "1.0.0",
   "type": "module",
   "main": "src/index.ts",
