--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -1,5 +1,14 @@
-name = "berghain-worker"
+
+
+name = "berghain-api-production"
 main = "src/index.ts"
-account_id = "e611850c31bf52879f8dc10f7cff6686"
-workers_dev = true
 compatibility_date = "2024-03-01"
+account_id = "e611850c31bf52879f8dc10f7cff6686"
+
+[build]
+command = ""
+
+[[routes]]
+pattern = "tyna.ninja/api/*"  # ← 独自ドメイン名を指定
+zone_id = "2aac368de6eaf231b0ca667f9a6ea5d4"
+
