--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,18 +7,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5"
-    },
-    "scripts": {
+    "typescript": "^4.9.5",
+    "web-vitals": "^4.2.4"
+  },
+  "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    },
-    "devDependencies": {
+  },
+  "devDependencies": {
+    "@types/jest": "^29.2.4",
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@types/jest": "^29.2.4"
-    }
-    }
-    
+    "@types/react-dom": "^18.0.11"
+  }
+}
