--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,8 +17,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11"
+    "@types/react-dom": "^18.0.11",
+    "@types/testing-library__react": "^10.2.0"
   }
 }
