--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/jest": "^29.2.4",
     "@types/react": "^18.0.28",
