--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "berghain-stats-viewer",
   "version": "1.0.0",
+  "homepage": "/",  
   "private": true,
   "dependencies": {
     "axios": "^1.6.0",
