--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -3,14 +3,10 @@ main = "./src/index.ts"
 compatibility_date = "2024-03-01"
 account_id = "e611850c31bf52879f8dc10f7cff6686"
 
-[build]
-command = ""
-
 [[routes]]
 pattern = "berghain.tyna.ninja/api/*"
 zone_id = "2aac368de6eaf231b0ca667f9a6ea5d4"
 
-
 [[routes]]
-pattern = "berghain.pages.dev/api/*"
-custom_domain = false
+pattern = "klubnacht.tyna.ninja/api/*"
+zone_id = "2aac368de6eaf231b0ca667f9a6ea5d4"
